# Generative-AI-A2A-Application

./: README.md  docker-compose.yml
agent_client/: Dockerfile  pyproject.toml
agent_client/src/agent_client/: __main__.py
agent_server/: Dockerfile  pyproject.toml
agent_server/src/agent_server/: __main__.py
