[project]
name = "agent-server"
version = "0.1.0"
description = ""
authors = [
    {name = "Vivek Yadav",email = "v.cse59@gmail.com"}
]
dependencies = [
    "a2a-sdk>=0.2.6",
    "uvicorn>=0.34.2",
    "fastapi (>=0.115.12,<0.116.0)",
]

[tool.poetry]
license = "MIT"

[tool.poetry.scripts]
agent-server = "agent_server.__main__:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"